Make skimmer function/file that can be imported

--- a/Test_skimmer_import.ipynb
+++ b/Test_skimmer_import.ipynb
@@ -19,7 +19,7 @@
     "from ROOT import gSystem\n",
     "gSystem.Load('libDmpEvent.so')\n",
     "from ROOT import DmpChain\n",
-    "from ROOT import TChain"
+    "#from ROOT import TChain"
    ]
   },
   {
@@ -73,7 +73,7 @@
     "Use_data = False\n",
     "if( Use_data ):\n",
     "    infile = \"/dpnc/beegfs/dampe/prod/FM/skim/6.0.0/v2/2018/03/01_data_100_500.root\"\n",
-    "    infile = home + \"data_file_3.root\"\n",
+    "    #infile = home + \"data_file_3.root\"\n",
     "    dc = DmpChain(\"CollectionTree\")\n",
     "    ttt = dc.Add(infile)\n",
     "else:\n",
@@ -91,77 +91,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "skim = np.zeros(nevents, dtype=np.bool)\n",
-    "for i in range(nevents):\n",
-    "    ev = dc.GetDmpEvent(i)\n",
-    "\n",
-    "    # 1: BGO reconstructed energy greater than 20 GeV\n",
-    "    BGOrec = ev.pEvtBgoRec()\n",
-    "    BGO_TotalE = BGOrec.GetTotalEnergy() # [MeV]\n",
-    "    if( BGO_TotalE<2e4 ):\n",
-    "        continue\n",
-    "\n",
-    "    # 2: rMaxELayer cut\n",
-    "    BGO_MaxELayer = max( [BGOrec.GetELayer(j) for j in range(14)] )\n",
-    "    ratio = BGO_MaxELayer/BGO_TotalE\n",
-    "    if( ratio>0.35 ):\n",
-    "        continue\n",
-    "\n",
-    "    # 3: iBarMaxE cut\n",
-    "    #   Events where the maximum energy OF A SINGLE HIT is deposited at the edge of the calorimeter?\n",
-    "    #   By 1, 2, 3    So how come we skip the first layer of BGO? --> David: Would prob be removed by vertex cut anyway\n",
-    "    BGOhits = ev.pEvtBgoHits()\n",
-    "    BGO_NHits = BGOhits.GetHittedBarNumber()\n",
-    "    BGO_HitE = np.array(BGOhits.fEnergy, dtype=np.float)\n",
-    "    BGO_HitBarId = np.array(BGOhits.fGlobalBarID, dtype=np.uint16)\n",
-    "\n",
-    "    Hit123_maxE = np.zeros(3)\n",
-    "    Hit123_BarIdx = -1*np.ones(3)\n",
-    "    for j in range(BGO_NHits):\n",
-    "        HitE = BGO_HitE[j]\n",
-    "        HitLayer = BGOhits.GetLayerID(j)\n",
-    "        if( (HitLayer in [1,2,3]) and (HitE>Hit123_maxE[HitLayer-1]) ):\n",
-    "            IdxBar = np.divide(BGO_HitBarId[j],2**6)%31\n",
-    "            Hit123_maxE[HitLayer-1] = HitE\n",
-    "            Hit123_BarIdx[HitLayer-1] = IdxBar\n",
-    "    for j in range(3):\n",
-    "        if( Hit123_BarIdx[j]<=0 or Hit123_BarIdx[j]==21 ):\n",
-    "            continue\n",
-    "\n",
-    "    # 4 & 5: FullBGO cut (+ shower vertex/direction successfully reconstructed)\n",
-    "    BGO_ZTop, BGO_ZBottom = 46, 448\n",
-    "    BGO_Slope = [BGOrec.GetSlopeYZ(), BGOrec.GetSlopeXZ()]\n",
-    "    BGO_Intercept = [BGOrec.GetInterceptYZ(), BGOrec.GetInterceptXZ()]\n",
-    "    if( (BGO_Slope[1]==0 and BGO_Intercept[1]==0) or (BGO_Slope[0]==0 and BGO_Intercept[0]==0) ):\n",
-    "        continue\n",
-    "    XTop = BGO_Slope[1]*BGO_ZTop + BGO_Intercept[1]\n",
-    "    YTop = BGO_Slope[0]*BGO_ZTop + BGO_Intercept[0]\n",
-    "    XBottom = BGO_Slope[1]*BGO_ZBottom + BGO_Intercept[1]\n",
-    "    YBottom = BGO_Slope[0]*BGO_ZBottom + BGO_Intercept[0]\n",
-    "    if( np.any(np.abs([XTop,YTop,XBottom,YBottom])>280) ):\n",
-    "        continue\n",
-    "\n",
-    "    # If we were not stopped by now, set the skim variable to true\n",
-    "    skim[i] = True"
+    "import Skimmer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Consistency check, are they events in skim selecting that do not pass the filter?\n",
-      "\t True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print( \"Consistency check, are they events in skim selecting that do not pass the filter?\")\n",
-    "print(\"\\t\", any( ~skim ))"
+    "skim = Skimmer.SkimmerEv(dc)"
    ]
   },
   {
@@ -170,9 +109,27 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(13, 1000)"
+       "array([False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False,  True, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False, False,  True, False, False, False, False,\n",
+       "       False])"
       ]
      },
      "execution_count": 7,
@@ -181,15 +138,9 @@
     }
    ],
    "source": [
-    "np.sum(skim), len(skim)"
+    "print(np.sum(skim))\n",
+    "skim[:100]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
