Another bug fix

--- a/Test_skimmer_import.ipynb
+++ b/Test_skimmer_import.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,46 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TStreamerInfo::BuildCheck:0: RuntimeWarning: \n",
-      "   The StreamerInfo of class DmpRunSimuHeader read from file /dpnc/beegfs/dampe/prod/MC/reco/v6r0p12/allHe4-v6r0p12_10TeV_100TeV-FTFP_BGO_Quenching/allHe4-v6r0p12_10TeV_100TeV-FTFP_BGO_Quenching.noOrb.500005.reco.root\n",
-      "   has the same version (=1) as the active class but a different checksum.\n",
-      "   You should update the version to ClassDef(DmpRunSimuHeader,2).\n",
-      "   Do not try to write objects with the current class definition,\n",
-      "   the files will not be readable.\n",
-      "\n",
-      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
-      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
-      "the on-file layout version 1:\n",
-      "   string fHadrPhysList; //\n",
-      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
-      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
-      "the on-file layout version 1:\n",
-      "   double fCrmcEnergyThresholdGev; //\n",
-      "TStreamerInfo::CompareContent:0: RuntimeWarning: The following data member of\n",
-      "the in-memory layout version 1 of class 'DmpRunSimuHeader' is missing from \n",
-      "the on-file layout version 1:\n",
-      "   double fCrmcEnergyThreshold2Gev; //\n"
+      "2923\n"
      ]
     }
    ],
    "source": [
-    "Use_data = False\n",
+    "Use_data = True\n",
     "if( Use_data ):\n",
-    "    infile = \"/dpnc/beegfs/dampe/prod/FM/skim/6.0.0/v2/2018/03/01_data_100_500.root\"\n",
+    "    infile = \"/dpnc/beegfs/dampe/prod/FM/skim/6.0.0/v2/2018/03/01_data_025_050.root\"\n",
     "    #infile = home + \"data_file_3.root\"\n",
     "    dc = DmpChain(\"CollectionTree\")\n",
     "    ttt = dc.Add(infile)\n",
@@ -87,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,34 +80,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "2923\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False,  True, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False,  True, False, False, False, False,\n",
-       "       False])"
+       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.18"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
